# Gradorix

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: dependencies.py  main.py
app/admin/: admin.py  auth.py
app/auth/: password.py  utils.py
app/core/: config.py  database.py  enums.py  points_utils.py
app/minio/: init_minio.py  minio_client.py
app/models/: achievement.py  activity.py  calendar_event.py  challenge.py  challenge_employee.py  challenge_junior.py  kb_article.py  kb_section.py  meeting_attendance.py  mentor_employee.py  mentor_junior.py  notification.py  push_subscription.py  quiz.py  quiz_result.py  refresh_token.py  team.py  team_member.py  user.py  user_achievement.py  user_points.py
app/repositories/: achievement_repository.py  activity_repository.py  calendar_event_repository.py  challenge_employee_repository.py  challenge_junior_repository.py  challenge_repository.py  kb_repository.py  meeting_attendance_repository.py  mentor_employee_repository.py  mentor_junior_repository.py  notification_repository.py  push_subscription_repository.py  quiz_repository.py  quiz_result_repository.py  team_repository.py  token_repository.py  user_achievement_repository.py  user_points_repository.py  user_repository.py
app/routers/: achievements.py  activities.py  agent.py  auth.py  calendar_events.py  challenge_employee.py  challenge_junior.py  challenges.py  kb.py  meeting_attendance.py  mentor_employee.py  mentor_junior.py  notifications.py  push.py  ws.py  (+6 more)
migrations/: env.py
tests/: conftest.py
(+75 files in other folders)
